k8s/prober-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oncall-prober
spec:
  selector:
    app: oncall-prober
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
